--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
 
 <div class="header">
   <h1>derfacn test site</h1>
-  <p>A <b>responsive</b>all code not my own!</p>
+  <p><b>ALL CODE NOT MY OWN!</b></p>
 </div>
 
 <div class="navbar">
