--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
   <div class="side">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
+    <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
