--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
     <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <p>Its me now, you can find me on Telegram:<a href="https://t.me/derfacn>derfacn</a></p>
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
     <div class="fakeimg" style="height:60px;">Image</div><br>
@@ -148,7 +148,7 @@ body {
   </div>
   <div class="main">
     <h2>ABOUT MY SITE</h2>
-    <h5>Title description, Dec 7, 2017</h5>
+    <h5>, Sept. 7</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
