--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ body {
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
     <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
-    <p>Its me now, you can find me on Telegram:<a href="https://t.me/derfacn>derfacn</a></p>
+    <p>Its me now, you can find me on Telegram:<a href="https://t.me/derfacn">derfacn</a></p>
+    <br>Whatsapp: +380979426758
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
     <div class="fakeimg" style="height:60px;">Image</div><br>
