--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 
 <div class="navbar">
   <a href="#" class="active">Home</a>
-  <a href="#">Link</a>
+  <a href="https://derfacn.github.io/learning.html">TAP ME</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
 </div>
