--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <title>MAIN PAGE</title>
 </head>
-  <a href="tg.me/derfacn">Новітня історія1</a>
-  <a href="tg.me/derfacn">Новітня історія2</a>
-  <a href="tg.me/derfacn">Новітня історія3</a>
-  <a href="tg.me/derfacn">Новітня історія4</a>
-  <a href="tg.me/derfacn">Новітня історія5</a>
-  <a href="tg.me/derfacn">Новітня історія6</a>
-  <a href="tg.me/derfacn">Новітня історія7</a>
-  <a href="tg.me/derfacn">Новітня історія8</a>
-  <a href="tg.me/derfacn">Новітня історія9</a>
-  <a href="tg.me/derfacn">Новітня історія10</a>
-  <a href="tg.me/derfacn">Новітня історія11</a>
-  <a href="tg.me/derfacn">Новітня історія12</a>
-  <a href="tg.me/derfacn">Новітня історія13</a>
+  <a href="https://derfacn.github.io/main.html">ГОЛОВНА СТОРІНКА</a><br>
+  <a href="tg.me/derfacn">Новітня історія1</a><br>
+  <a href="tg.me/derfacn">Новітня історія2</a><br>
+  <a href="tg.me/derfacn">Новітня історія3</a><br>
+  <a href="tg.me/derfacn">Новітня історія4</a><br>
+  <a href="tg.me/derfacn">Новітня історія5</a><br>
+  <a href="tg.me/derfacn">Новітня історія6</a><br>
+  <a href="tg.me/derfacn">Новітня історія7</a><br>
+  <a href="tg.me/derfacn">Новітня історія8</a><br>
+  <a href="tg.me/derfacn">Новітня історія9</a><br>
+  <a href="tg.me/derfacn">Новітня історія10</a><br>
+  <a href="tg.me/derfacn">Новітня історія11</a><br>
+  <a href="tg.me/derfacn">Новітня історія12</a><br>
+  <a href="tg.me/derfacn">Новітня історія13</a><br>
 </body>
 </html>
