--- a/main.html
+++ b/main.html
@@ -128,31 +128,28 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#" class="active">Home</a>
-  <a href="https://derfacn.github.io/learning.html">TAP ME</a>
+  <a href="https://derfacn.github.io/main.html" class="active">Main</a>
+  <a href="https://derfacn.github.io/learning.html">Inctruction</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
 </div>
 
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
+    <h2>Про проект</h2>
+    <h5>Фото головного автора:</h5>
     <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
-    <p>Its me now, you can find me on Telegram:<a href="https://t.me/derfacn">derfacn</a></p>
-    <br>Whatsapp: +380979426758
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
+    <p>Можна знайти мене в Telegram:<a href="https://t.me/derfacn">derfacn</a></p>
+    <br>А також Whatsapp: +380979426758
+    <h3>Автор ідеї</h3>
+    <p><a href="t.me/NixtViel">Влад</a>, учень 10-Б класу Вільногірського ліцею №5</p>
+    <img src="nixtviel.jpg" alt="me" height="325px">
   </div>
   <div class="main">
-    <h2>ABOUT MY SITE</h2>
-    <h5>, Sept. 7</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h2>Про цей сайт</h2>
+    <h5>28.11.2022</h5>
+    <p>Даний проект створено в напрямку розвитку навиків програмамування одного автору і історичних знань іншого</p>
+    <p>На сайті розміщується контент з приводу новітьної історії і також </p>
     <br>
     <h2>TITLE HEADING</h2>
     <h5>Title description, Sep 2, 2017</h5>
