--- a/programming.html
+++ b/programming.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   Данна сторінка ще не наповнена цікавою інформацією. Поки що можна перегляну <a href="https://github.com/DerFacn">мій GitHub</a><br>
-  <a href="https://derfacn.github.io/index.html"><---Повернутись назад</a>
+  <a href="https://derfacn.github.io/index.html"><---Повернутись назад</a> Зробить сальтуху в вікно і обісраться
 </body>
 </html>
