--- a/history.html
+++ b/history.html
@@ -4,7 +4,6 @@
   <title>Історія|NixtViel</title>
 </head>
 <body>
-  Данна сторінка ще не наповнена цікавою інформацією.<br>
-  <a href="https://derfacn.github.io/index.html"><---Повернутись назад</a>
+  <font face="Comac sans MS" size="24"> <a href="https://derfacn.github.io/history/ukraine.html">Ukraine History</a>
 </body>
 </html>
