--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="https://derfacn.github.io/programming.html" class="active">Програмування</a>
+  <a href="https://derfacn.github.io/programming.html">Програмування</a>
   <a href="https://derfacn.github.io/history.html">Історія</a>
   <a href="https://derfacn.github.io/learning.html">Інструкція</a>
   <a href="#" class="right">Link</a>
