--- a/history.html
+++ b/history.html
@@ -4,6 +4,7 @@
   <title>Історія|NixtViel</title>
 </head>
 <body>
-  <font face="Comac sans MS" size="24"> <a href="https://derfacn.github.io/history/ukraine.html">Ukraine History</a>
+  <font face="Comac sans MS" size="24"> <a href="https://derfacn.github.io/history/ukraine.html">Ukraine History</a><br>
+     <a href="https://derfacn.github.io/history/germany.html">Germany</a>
 </body>
 </html>
