--- a/learning.html
+++ b/learning.html
@@ -1,1 +1,27 @@
-ТЕКСТ, ЯКИЙ БУДЕ НАПИСАНО В ДЕФОЛТ ШАБЛОНІ
+<!DOCTYPE html>
+<html>
+  <head> <title> Інструкція </title> 
+    <style>
+   .ex {
+    border: dashed 3px #634F36;
+    background: #fff700;
+    font-family: "Roboto", Courier, monospace; 
+    padding: 7px;
+    font-size: 80%;
+    margin: 0 0 1em;
+   }
+  </style>
+  </head>
+  <body>
+    <font size="12">Для початку скопіюй весь шаблон знизу</font>
+    <p class="ex"> &lt;!DOCTYPE html&gt;<br>
+      &lt;html&gt;<br>
+      &lt;head&gt; &lt;title&gt; !НАЗВА СТОРІНКИ! &lt;/title&gt; &lt;/head&gt;<br>
+      &lt;body&gt;<br>
+      ТУТ ТВІЙ ТЕКСТ<br>
+      &lt;/body&gt;<br>
+      &lt;/html&gt;<br></p>
+    <font size="12">Далі заходиш на гітхаб і створюєш нову сторінку власноруч</font>
+    <font color="red" size="12">АБО ПЕРЕДАЄШ ТЕКСТ МЕНІ І Я САМ СТВОРЮЮ СТОРІНКУ</font>
+  </body>
+</html>
