--- a/learning.html
+++ b/learning.html
@@ -13,7 +13,7 @@
   </style>
   </head>
   <body>
-    <font size="12">Для початку скопіюй весь шаблон знизу</font>
+    <font size="12"Для початку скопіюй весь шаблон знизу</font>
     <p class="ex"> &lt;!DOCTYPE html&gt;<br>
       &lt;html&gt;<br>
       &lt;head&gt; &lt;title&gt; !НАЗВА СТОРІНКИ! &lt;/title&gt; &lt;/head&gt;<br>
@@ -21,7 +21,7 @@
       ТУТ ТВІЙ ТЕКСТ<br>
       &lt;/body&gt;<br>
       &lt;/html&gt;<br></p>
-    <font size="12">Далі заходиш на гітхаб і створюєш нову сторінку власноруч</font>
+    Далі заходиш на гітхаб і створюєш нову сторінку власноруч</font><br>
     <font color="red" size="12">АБО ПЕРЕДАЄШ ТЕКСТ МЕНІ І Я САМ СТВОРЮЮ СТОРІНКУ</font>
   </body>
 </html>
