--- a/learning.html
+++ b/learning.html
@@ -13,7 +13,7 @@
   </style>
   </head>
   <body>
-    <font size="12"Для початку скопіюй весь шаблон знизу</font>
+    <font size="12">Для початку скопіюй весь шаблон знизу
     <p class="ex"> &lt;!DOCTYPE html&gt;<br>
       &lt;html&gt;<br>
       &lt;head&gt; &lt;title&gt; !НАЗВА СТОРІНКИ! &lt;/title&gt; &lt;/head&gt;<br>
