--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>derfacn test site</h1>
-  <p><b>ALL CODE NOT MY OWN!</b></p>
+  <h1>derfacn-s site</h1>
+  <p><b>Проект-сайт вашого розвитку</b></p>
 </div>
 
 <div class="navbar">
