--- a/index.html
+++ b/index.html
@@ -2,123 +2,18 @@
 <html lang="en">
 <head>
 <title>Головна сторінка</title>
+<link href="style/style.css" rel="stylesheet" type="text/css"> <!-- STYLE -->
+
+<link rel="apple-touch-icon" sizes="76x76" href="style/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="style/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="style/favicon-16x16.png">
+<link rel="manifest" href="style/site.webmanifest">						<!-- ICON -->
+<link rel="mask-icon" href="style/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-/* Style the body */
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-/* Header/logo Title */
-.header {
-  padding: 80px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-}
-
-/* Increase the font size of the heading */
-.header h1 {
-  font-size: 40px;
-}
-
-/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-
-/* Right-aligned link */
-.navbar a.right {
-  float: right;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Active/current link */
-.navbar a.active {
-  background-color: #666;
-  color: white;
-}
-
-/* Column container */
-.row {  
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width: 100%;
-  }
-}
-</style>
 </head>
 <body>
 
@@ -131,7 +26,7 @@ body {
   <a href="https://derfacn.github.io/programming.html">Програмування</a>
   <a href="https://derfacn.github.io/history.html">Історія</a>
   <a href="https://derfacn.github.io/learning.html">Інструкція</a>
-  <a href="#" class="right">Link</a>
+  <a href="https://derfacn.github.io/" class="right active">Головна сторінка</a>
 </div>
 
 <div class="row">
@@ -141,7 +36,7 @@ body {
     <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
     <p>Можна знайти мене в Telegram:<a href="https://t.me/derfacn">derfacn</a></p>
     <br>А також Whatsapp: +380979426758
-    <h3>Автор ідеї</h3>
+    <h3>Автор матеріалу з історії</h3>
     <p><a href="t.me/NixtViel">Влад</a>, учень 10-Б класу Вільногірського ліцею №5</p>
     <img src="nixtviel.jpg" alt="me" height="325px">
   </div>
@@ -161,7 +56,8 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>Ви можете знайти мене в <a href="https://t.me/derfacn">Телеграмі</a></h2>
+	Весь код знаходиться на <a href="https://github.com/DerFacn/derfacn.github.io/">GitHub</a>
 </div>
 
 </body>
