--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Головна сторінка</title>
+<title>Головна сторінка|derfacn-s site</title>
 <link href="style/style.css" rel="stylesheet" type="text/css"> <!-- STYLE -->
 
 <link rel="apple-touch-icon" sizes="76x76" href="style/apple-touch-icon.png">
