--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Головна сторінка|derfacn-s site</title>
+<title>Головна сторінка</title>
 <link href="style/style.css" rel="stylesheet" type="text/css"> <!-- STYLE -->
 
 <link rel="apple-touch-icon" sizes="76x76" href="style/apple-touch-icon.png">
@@ -23,10 +23,10 @@
 </div>
 
 <div class="navbar">
-  <a href="https://derfacn.github.io/programming.html">Програмування</a>
-  <a href="https://derfacn.github.io/history.html">Історія</a>
-  <a href="https://derfacn.github.io/learning.html">Інструкція</a>
-  <a href="https://derfacn.github.io/" class="right active">Головна сторінка</a>
+  <a href="programming.html">Програмування</a>
+  <a href="history.html">Історія</a>
+  <a href="learning.html">Інструкція</a>
+  <a href="index.html" class="right active">Головна сторінка</a>
 </div>
 
 <div class="row">
