--- a/history.html
+++ b/history.html
@@ -25,7 +25,7 @@
 <div class="navbar">
   <a href="programming.html">Програмування</a>
   <a href="history.html" class="active">Історія</a>
-  <a href="learning.html">Інструкція</a>
+  <a href="learning.html">Для авторів</a>
   <a href="index.html" class="right">Головна сторінка</a>
 </div>
 
