--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="navbar">
   <a href="programming.html">Програмування</a>
   <a href="history.html">Історія</a>
-  <a href="learning.html">Інструкція</a>
+  <a href="learning.html">Для авторів</a>
   <a href="index.html" class="right active">Головна сторінка</a>
 </div>
 
