--- a/programming.html
+++ b/programming.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Програмування|derfacn</title>
+<title>Програмування|derfacn</title>
+<link href="style/programming.css" rel="stylesheet" type="text/css"> <!-- STYLE -->
+
+<link rel="apple-touch-icon" sizes="76x76" href="style/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="style/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="style/favicon-16x16.png">
+<link rel="manifest" href="style/site.webmanifest">						<!-- ICON -->
+<link rel="mask-icon" href="style/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Данна сторінка ще не наповнена цікавою інформацією. Поки що можна перегляну <a href="https://github.com/DerFacn">мій GitHub</a><br>
-  <a href="https://derfacn.github.io/index.html"><---Повернутись назад</a> 
+
+<div class="header">
+  <h1>Програмування|derfacn</h1>
+  <p><b>Python-powerful language</b></p>
+</div>
+
+<div class="navbar">
+  <a href="programming.html">Програмування</a>
+  <a href="history.html">Історія</a>
+  <a href="learning.html">Для авторів</a>
+  <a href="index.html" class="right active">Головна сторінка</a>
+</div>
+
+<div class="row">
+  <div class="side">
+    <h5>Програмування:</h5>
+    <a href="https://www.python.org/doc/">Документації Python</a>
+  </div>
+  <div class="main">
+    <h2>Поки що ця сторінка не наповнена корисною інформацією.</h2>
+  </div>
+</div>
+
+<div class="footer">
+<h2>Ви можете знайти мене в <a href="https://t.me/derfacn">Телеграмі</a></h2>
+	Весь код знаходиться на <a href="https://github.com/DerFacn/derfacn.github.io/">GitHub</a>
+</div>
+
 </body>
 </html>
