--- a/programming.html
+++ b/programming.html
@@ -23,10 +23,10 @@
 </div>
 
 <div class="navbar">
-  <a href="programming.html">Програмування</a>
+  <a href="programming.html" class="active">Програмування</a>
   <a href="history.html">Історія</a>
   <a href="learning.html">Для авторів</a>
-  <a href="index.html" class="right active">Головна сторінка</a>
+  <a href="index.html" class="right">Головна сторінка</a>
 </div>
 
 <div class="row">
