--- a/index.html
+++ b/index.html
@@ -33,25 +33,24 @@
   <div class="side">
     <h2>Про проект</h2>
     <h5>Фото головного автора:</h5>
-    <img src="E2843F62-7524-4DEA-B6C5-EEDAA39B24B4.jpeg" alt="me" height="325px">
-    <p>Можна знайти мене в Telegram:<a href="https://t.me/derfacn">derfacn</a></p>
+    <img src="pictures/author.jpeg" alt="me" height="325px">
+    <p>Можна знайти мене в Telegram:<a href="https://t.me/derfacn" target="_blank">derfacn</a></p>
     <br>А також Whatsapp: +380979426758
     <h3>Автор матеріалу з історії</h3>
-    <p><a href="t.me/NixtViel">Влад</a>, учень 10-Б класу Вільногірського ліцею №5</p>
-    <img src="nixtviel.jpg" alt="me" height="325px">
+    <p><a href="https://t.me/NixtViel" target="_blank">Влад</a>, учень 10-Б класу Вільногірського ліцею №5</p>
+    <img src="pictures/nixtviel.jpg" alt="me" height="325px">
   </div>
   <div class="main">
     <h2>Про цей сайт</h2>
-    <h5>28.11.2022</h5>
-    <p>Даний проект створено в напрямку розвитку навиків програмамування одного автору і історичних знань іншого</p>
-    <p>На сайті розміщується контент з приводу новітьної історії і також </p>
-    <!--
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    -->
+    <h5>28.11.2022 [22:12]</h5>
+    <p>Даний проект створено в напрямку розвитку навиків программування одного автору і історичних знань іншого</p>
+    На сайті розміщується контент з приводу новітьної історії і також мови програмування Python. На разі усі автори проекту
+    будуть готові в будь-який момент поговорити з вами на будь-яку тему стосовно <a href="https://t.me/NixtViel" target="_blank">історії</a> та <a href="https://t.me/derfacn" target="_blank">Python</a><br>
+    <h2>Запрошуємо Вас до Нашої команди!</h2>
+    <h5>01.12.2022 [0:30]</h5>
+    Від сьогодні сайт набув свого вигляду і структурованості, і тому запрошуємо всіх небайдужих приєднатись до команди авторів матеріалу або самого сайту! Впевнений, всі, 
+    хто напише <a href="https://t.me/derfacn" target="_blank">головному автору</a>, точно знайде собі цікаву роботу в ролі творця контенту, або ж спів-автора цього сайту
+    (при базових знаннях HTML) а також однодумців, з якими можна знайти спільні інтереси і поговорити на цікаві для вас теми. <b>Приєднуйся!</b>
   </div>
 </div>
 
