--- a/learning.html
+++ b/learning.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head> <title> Інструкція </title> 
-    <style>
-   .ex {
-    border: dashed 3px #634F36;
-    background: #fff700;
-    font-family: "Roboto", Courier, monospace; 
-    padding: 7px;
-    font-size: 80%;
-    margin: 0 0 1em;
-   }
-  </style>
-  </head>
-  <body>
+<head> 
+<title> Інструкція </title> 
+<link href="style/style.css" rel="stylesheet" type="text/css"> <!-- STYLE -->
+
+<link rel="apple-touch-icon" sizes="76x76" href="style/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="style/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="style/favicon-16x16.png">
+<link rel="manifest" href="style/site.webmanifest">						<!-- ICON -->
+<link rel="mask-icon" href="style/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+<div class="for_author">
+  <h1>Для авторів</h1>
+  <p><b>Всім, кого цікавить</b></p>
+</div>
+
+<div class="navbar">
+  <a href="programming.html">Програмування</a>
+  <a href="history.html">Історія</a>
+  <a href="learning.html" class="active">Для авторів</a>
+  <a href="index.html" class="right">Головна сторінка</a>
+</div>
+
+<div class="row">
+  <div class="main">
+    <h2>Для тих, кого зацікавила роль автора контенту або самого сайту</h2>
+    <h5>01.12.2022 [0:57]</h5>
+    Ви не марно натиснули кнопку "Для авторів", бо саме тут ми вам розповімо про вашу роль як Автора контенту
+
+<!--
     <font size="12">Для початку скопіюй весь шаблон знизу
     <p class="ex"> &lt;!DOCTYPE html&gt;<br>
       &lt;html&gt;<br>
@@ -23,5 +46,6 @@
       &lt;/html&gt;<br></p>
     Далі заходиш на гітхаб і створюєш нову сторінку власноруч</font><br>
     <font color="red" size="12">АБО ПЕРЕДАЄШ ТЕКСТ МЕНІ І Я САМ СТВОРЮЮ СТОРІНКУ</font>
-  </body>
+-->
+</body>
 </html>
