--- a/learning.html
+++ b/learning.html
@@ -33,7 +33,13 @@
   <div class="main">
     <h2>Для тих, кого зацікавила роль автора контенту або самого сайту</h2>
     <h5>01.12.2022 [0:57]</h5>
-    Ви не марно натиснули кнопку "Для авторів", бо саме тут ми вам розповімо про вашу роль як Автора контенту
+    Ви не марно натиснули кнопку "Для авторів", бо саме тут ми вам розповімо про вашу роль як Автора контенту<br>
+    Пропонуємо Вам випробувати себе як автора контенту сайту по будь якій шкільній тематиці тематиці, або ж повноцінним
+    творцем сторінки(стиль, покращення структурованості, зручний хоcтинг на інших сервісах для широкого застосування інших інструментів)<br>
+    
+    Напишіть мені якщо ви цікавитесь і маєте будь-який досвід з наступними речами: Python, Flask, Django, pyTelegramBotAPI, aiogram. requests, html, BeautifulSoup4,
+    інтернет(мається на увазі розуміння праці TCP-IP, Sockets, proxy, servering, iPv4, рівні передачі інформації, SQLDataBases) і інше 
+    
 
 <!--
     <font size="12">Для початку скопіюй весь шаблон знизу
