--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     Від сьогодні сайт набув свого вигляду і структурованості, і тому запрошуємо всіх небайдужих приєднатись до команди авторів матеріалу або самого сайту! Впевнений, всі, 
     хто напише <a href="https://t.me/derfacn" target="_blank">головному автору</a>, точно знайде собі цікаву роботу в ролі творця контенту, або ж спів-автора цього сайту
     (при базових знаннях HTML) а також однодумців, з якими можна знайти спільні інтереси і поговорити на цікаві для вас теми. <b>Приєднуйся!</b>
+	  <script src="//onlinegdb.com/embed/js/3Osc90IeSF?theme=dark"></script>
   </div>
 </div>
 
