--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
                 <p><img src="./images/mail.svg"> derfacn@gmail.com</p>
                 <p><img src="./images/telegram.svg"> <a href="https://t.me/derfacn" target="_blank">t.me/derfacn</a></p>
                 </div>
-            </div>
+            </div> 
         </div>
+    </div>
+    <div class="footer">
+        © 2024 powered by GitHub
     </div>
 </body>
 </html>
