--- a/index.html
+++ b/index.html
@@ -65,12 +65,17 @@
                         <div class="category">Designe tool:</div>
                         <div class="skills"><img src="./images/figma.svg" alt="figma_icon"> Figma</div>
                     </div>
+		    <div class="row">
+                        <div class="category">Containerization:</div>
+                        <div class="skills"><img src="./images/docker.svg" alt="docker_icon"> Docker</div>
+                    </div>
                 </div>
             </div>
             <div class="contacts">
-                <p> +380979426758</p>
+                <p> +4915158896224</p>
                 <p><img src="./images/mail.svg"> derfacn@gmail.com</p>
                 <p><img src="./images/telegram.svg"> <a href="https://t.me/derfacn" target="_blank">t.me/derfacn</a></p>
+                <p><img src="./images/whatsapp.svg"> <a href="https://wa.me/qr/LDCDAYTGFKOAJ1" target="_blank">WhatsApp</a></p>
                 </div>
             </div> 
         </div>
